--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nativescript-bluetooth": "^1.1.4",
+    "nativescript-loading-indicator": "^2.2.2",
     "nativescript-theme-core": "~1.0.2",
     "tns-core-modules": "2.5.0"
   },
